feat: use junit and implement interfaces
